# text-simplification-bot

./: .env-template  README.md  pyproject.toml
src/text_simplification_bot/api/: main.py
src/text_simplification_bot/gui/: main.py
